[gd_scene load_steps=2 format=2]

[ext_resource path="res://base.gd" type="Script" id=1]

[node name="Base" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="Label" parent="Background"]
anchor_left = 0.341797
anchor_top = 0.0333333
anchor_right = 0.642578
anchor_bottom = 0.0566667
margin_top = -1.90735e-06
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Input here the text/Base64-encoded to process:"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Text" type="TextEdit" parent="Background"]
anchor_left = 0.244141
anchor_top = 0.0833333
anchor_right = 0.732422
anchor_bottom = 0.916667
margin_top = -3.8147e-06
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Encode" type="Button" parent="Background"]
anchor_left = 0.195313
anchor_top = 0.916667
anchor_right = 0.251953
anchor_bottom = 0.95
mouse_default_cursor_shape = 2
button_mask = 7
text = "Encode"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Decode" type="Button" parent="Background"]
anchor_left = 0.732422
anchor_top = 0.916667
anchor_right = 0.791992
anchor_bottom = 0.95
mouse_default_cursor_shape = 2
button_mask = 7
text = "Decode"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Copy" type="Button" parent="Background"]
anchor_left = 0.463867
anchor_top = 0.916667
anchor_right = 0.523438
anchor_bottom = 0.95
mouse_default_cursor_shape = 2
button_mask = 7
text = "Copy"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Copied" type="Label" parent="Background"]
visible = false
anchor_left = 0.537109
anchor_top = 0.916667
anchor_right = 0.580078
anchor_bottom = 0.94
custom_colors/font_color = Color( 0.145098, 0.431373, 0, 1 )
text = "Copied"
__meta__ = {
"_edit_use_anchors_": true
}
[connection signal="pressed" from="Background/Encode" to="." method="OnEncode"]
[connection signal="pressed" from="Background/Decode" to="." method="OnDecode"]
[connection signal="pressed" from="Background/Copy" to="." method="OnCopy"]
